# vops-cli

./: .gitignore  README.md  pyproject.toml
managedvault/: __init__.py  config.yaml  config_loader.py  managedvault.py
tests/: test_vopscli.py
vaults/: config1.hcl  vault2.hcl  vault3.hcl  vault4.hcl
vopscli/: __main__.py  cli.py
